; ModuleID = '/home/carl/AnghaBench/oss-fuzz/projects/njs/extr_njs_process_script_fuzzer.c_njs_process_script.c'
source_filename = "/home/carl/AnghaBench/oss-fuzz/projects/njs/extr_njs_process_script_fuzzer.c_njs_process_script.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_11__ = type { i32* }
%struct.TYPE_10__ = type { i64 }
%struct.TYPE_9__ = type { i32, i32* }

@NJS_OK = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [2 x i8] c"\0A\00", align 1
@.str.1 = private unnamed_addr constant [29 x i8] c"njs_process_events() failed\0A\00", align 1
@NJS_ERROR = common dso_local global i64 0, align 8
@.str.2 = private unnamed_addr constant [48 x i8] c"njs_process_script(): async events unsupported\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.TYPE_11__*, %struct.TYPE_10__*, %struct.TYPE_9__*)* @njs_process_script to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @njs_process_script(%struct.TYPE_11__* %0, %struct.TYPE_10__* %1, %struct.TYPE_9__* %2) #0 {
  %4 = alloca %struct.TYPE_11__*, align 8
  %5 = alloca %struct.TYPE_10__*, align 8
  %6 = alloca %struct.TYPE_9__*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i64, align 8
  store %struct.TYPE_11__* %0, %struct.TYPE_11__** %4, align 8
  store %struct.TYPE_10__* %1, %struct.TYPE_10__** %5, align 8
  store %struct.TYPE_9__* %2, %struct.TYPE_9__** %6, align 8
  %10 = load %struct.TYPE_11__*, %struct.TYPE_11__** %4, align 8
  %11 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %10, i32 0, i32 0
  %12 = load i32*, i32** %11, align 8
  store i32* %12, i32** %8, align 8
  %13 = load %struct.TYPE_9__*, %struct.TYPE_9__** %6, align 8
  %14 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %13, i32 0, i32 1
  %15 = load i32*, i32** %14, align 8
  store i32* %15, i32** %7, align 8
  %16 = load i32*, i32** %8, align 8
  %17 = load i32*, i32** %7, align 8
  %18 = load %struct.TYPE_9__*, %struct.TYPE_9__** %6, align 8
  %19 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 8
  %21 = sext i32 %20 to i64
  %22 = getelementptr inbounds i32, i32* %17, i64 %21
  %23 = call i64 @njs_vm_compile(i32* %16, i32** %7, i32* %22)
  store i64 %23, i64* %9, align 8
  %24 = load i64, i64* %9, align 8
  %25 = load i64, i64* @NJS_OK, align 8
  %26 = icmp eq i64 %24, %25
  br i1 %26, label %27, label %39

27:                                               ; preds = %3
  %28 = load %struct.TYPE_10__*, %struct.TYPE_10__** %5, align 8
  %29 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %28, i32 0, i32 0
  %30 = load i64, i64* %29, align 8
  %31 = icmp ne i64 %30, 0
  br i1 %31, label %32, label %36

32:                                               ; preds = %27
  %33 = load i32*, i32** %8, align 8
  %34 = call i32 @njs_disassembler(i32* %33)
  %35 = call i32 @njs_printf(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  br label %36

36:                                               ; preds = %32, %27
  %37 = load i32*, i32** %8, align 8
  %38 = call i64 @njs_vm_start(i32* %37)
  store i64 %38, i64* %9, align 8
  br label %39

39:                                               ; preds = %36, %3
  br label %40

40:                                               ; preds = %69, %39
  %41 = load i32*, i32** %8, align 8
  %42 = call i32 @njs_vm_pending(i32* %41)
  %43 = icmp ne i32 %42, 0
  br i1 %43, label %45, label %44

44:                                               ; preds = %40
  br label %72

45:                                               ; preds = %40
  %46 = load %struct.TYPE_11__*, %struct.TYPE_11__** %4, align 8
  %47 = load %struct.TYPE_10__*, %struct.TYPE_10__** %5, align 8
  %48 = call i64 @njs_process_events(%struct.TYPE_11__* %46, %struct.TYPE_10__* %47)
  store i64 %48, i64* %9, align 8
  %49 = load i64, i64* %9, align 8
  %50 = load i64, i64* @NJS_OK, align 8
  %51 = icmp ne i64 %49, %50
  %52 = zext i1 %51 to i32
  %53 = call i64 @njs_slow_path(i32 %52)
  %54 = icmp ne i64 %53, 0
  br i1 %54, label %55, label %58

55:                                               ; preds = %45
  %56 = call i32 @njs_stderror(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.1, i64 0, i64 0))
  %57 = load i64, i64* @NJS_ERROR, align 8
  store i64 %57, i64* %9, align 8
  br label %72

58:                                               ; preds = %45
  %59 = load i32*, i32** %8, align 8
  %60 = call i64 @njs_vm_waiting(i32* %59)
  %61 = icmp ne i64 %60, 0
  br i1 %61, label %62, label %69

62:                                               ; preds = %58
  %63 = load i32*, i32** %8, align 8
  %64 = call i32 @njs_vm_posted(i32* %63)
  %65 = icmp ne i32 %64, 0
  br i1 %65, label %69, label %66

66:                                               ; preds = %62
  %67 = call i32 @njs_stderror(i8* getelementptr inbounds ([48 x i8], [48 x i8]* @.str.2, i64 0, i64 0))
  %68 = load i64, i64* @NJS_ERROR, align 8
  store i64 %68, i64* %9, align 8
  br label %72

69:                                               ; preds = %62, %58
  %70 = load i32*, i32** %8, align 8
  %71 = call i64 @njs_vm_run(i32* %70)
  store i64 %71, i64* %9, align 8
  br label %40

72:                                               ; preds = %66, %55, %44
  %73 = load i64, i64* %9, align 8
  ret i64 %73
}

declare dso_local i64 @njs_vm_compile(i32*, i32**, i32*) #1

declare dso_local i32 @njs_disassembler(i32*) #1

declare dso_local i32 @njs_printf(i8*) #1

declare dso_local i64 @njs_vm_start(i32*) #1

declare dso_local i32 @njs_vm_pending(i32*) #1

declare dso_local i64 @njs_process_events(%struct.TYPE_11__*, %struct.TYPE_10__*) #1

declare dso_local i64 @njs_slow_path(i32) #1

declare dso_local i32 @njs_stderror(i8*) #1

declare dso_local i64 @njs_vm_waiting(i32*) #1

declare dso_local i32 @njs_vm_posted(i32*) #1

declare dso_local i64 @njs_vm_run(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
